gpio expander with PI4IO chip... failed

--- a/components/squeezelite/CMakeLists.txt
+++ b/components/squeezelite/CMakeLists.txt
@@ -15,6 +15,7 @@ idf_component_register( SRC_DIRS . external ac101 tas57xx
 						 			tools
 						 			audio
 									led_strip
+									gpio_expander
 						 EMBED_FILES vu.data
 )
 
